@@ -6,6 +6,8 @@ use Test::Most (
 );
 use P9Y::ProcessTable;
 
+$SIG{CHLD} = sub { wait; };  # stop feeding the zombies
+
 # fork a child process
 if (my $child_pid = fork) {
    # parent, fork returned PID of the child process
@@ -13,16 +15,16 @@ if (my $child_pid = fork) {
    
    die_on_fail;
    ok($p, 'child exists');
-   ok($p->pid == $child_pid, 'pid == pid');
+   ok($p->pid == $child_pid, 'pid == pid') || explain $p;
    restore_fail;
    
-   lives_ok { $p->kill(9) } 'child killed';
-   sleep 2;
+   lives_ok(sub { $p->kill(9) }, 'child killed') || (diag $@ and explain $p);
+   sleep 10;
    $p = P9Y::ProcessTable->process($child_pid);
-   ok(!$p, "child doesn't exist");
+   ok(!$p, "child doesn't exist") || explain $p;
 }
 else {
    # child, fork returned 0
    # child process will be killed soon
-   sleep 10000;
+   sleep 10;
 }
